--- a/laab/src/features.css
+++ b/laab/src/features.css
@@ -19,7 +19,7 @@
   position: absolute;
   top: 1850px;
   width: 600px;
-  left: 300px;
+  left: 330px;
   text-align: center;
 
 } 
