--- a/laab/src/navbar.css
+++ b/laab/src/navbar.css
@@ -91,6 +91,7 @@ margin-left: 30px;
     padding: 1rem;
     height: auto;
     width: 100%;
+    padding-left: 300px;
 
    }
 
